<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">反应测试</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ranking">排行榜</string>
    <string name="time">" 反应时间："</string>
    <string name="about">说明：点击上方区域开始测试，当蓝色时再次点击。显示的时间即本次反应测试的结果。</string>
    <string name="play">点击开始</string>
    <string name="title_activity_ranking">排行榜</string>
    <string name="name">姓名</string>
    <string name="rankingPrompt">来，战个痛快！！</string>
    <string name="title_activity_record">新纪录</string>
    <string name="newRecord">新记录</string>
    <string name="save">保存记录</string>

</resources>